# Lermontovization-0.25

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  study_of_lexemes_of_epithets.py  test_run.py  transfiguration.py
bot/: commands.py  config.py  telegram_bot.py
lermontovization/: __init__.py  __main__.py  transfiguration.py
preprod_research/: form_of_epithets_drafts_2  forms_of_epithets_drafts_1  make_tag_id_dict.py  opencorpora_tags_research.ipynb  source_text_sample.txt  study_of_lexemes_of_epithets.py  syntax_analyzer_exp.py  tag_id_dict.py
tests/: test_transfiguration.py
