[tool.poetry]
name = "lermontovization-0.25"
version = "0.1.0"
description = ""
authors = ["Alexander Lyotov <sippie84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pymorphy2 = "^0.9.1"
ipython = "^8.0.1"
PySocks = "^1.7.1"
python-telegram-bot = {extras = ["socks"], version = "^13.10"}
wordcloud = "^1.8.1"
"ufal.morphodita" = "^1.10.1"
"ufal.udpipe" = "^1.2.0"
corpy = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
